Modify Popup Modal CSS - Fix button alignment in the popup modal - Fix button alignment in the editor's footer

--- a/src/components/Badge/BadgeReport.css
+++ b/src/components/Badge/BadgeReport.css
@@ -15,4 +15,5 @@
 .dropdown-menu {
   height: 15vh;
   overflow-y: scroll;
+  overflow: auto;
 }
